fix: implement tokens in spacing

--- a/source/utilities/spacing/style.scss
+++ b/source/utilities/spacing/style.scss
@@ -1,8 +1,42 @@
 @use "sass:list";
 @use "sass:map";
-@use "../setting/var_default";
-@use "../border/style" as border;
+@use "../mixin/tokens";
 @use "../mixin/build-utility";
+
+$_: "u-spacing*";
+
+@include tokens.create($_, ("space"));
+
+$spacers: (
+    "0": 0,
+    "05": tokens.use($_, "space", 0.5),
+    "1": tokens.use($_, "space", 1),
+    "1half": tokens.use($_, "space", 1.5),
+    "2": tokens.use($_, "space", 2),
+    "3": tokens.use($_, "space", 3),
+    "4": tokens.use($_, "space", 4),
+    "5": tokens.use($_, "space", 5),
+    "6": tokens.use($_, "space", 6),
+    "7": tokens.use($_, "space", 7),
+    "8": tokens.use($_, "space", 8),
+    "9": tokens.use($_, "space", 9),
+    "10": tokens.use($_, "space", 10),
+    "11": tokens.use($_, "space", 11),
+    "12": tokens.use($_, "space", 12),
+    "13": tokens.use($_, "space", 13),
+    "14": tokens.use($_, "space", 14),
+    "15": tokens.use($_, "space", 15),
+    "16": tokens.use($_, "space", 16),
+    "17": tokens.use($_, "space", 17),
+    "18": tokens.use($_, "space", 18),
+    "19": tokens.use($_, "space", 19),
+    "20": tokens.use($_, "space", 20),
+    "21": tokens.use($_, "space", 21),
+    "22": tokens.use($_, "space", 22),
+    "23": tokens.use($_, "space", 23),
+    "24": tokens.use($_, "space", 24),
+    "auto": "auto",
+);
 
 $spacing-util: (
 );
@@ -15,8 +49,8 @@ $spacing-util: (
         $mods: (
         );
 
-    @each $size, $length in var_default.$spacers {
-        @each $size, $length in var_default.$spacers {
+    @each $size, $length in $spacers {
+        @each $size, $length in $spacers {
             @if $length !=auto or $prop ==margin {
                 $style: (
                     #{$size}:(#{$prop}-#{$side}: #{$length})
@@ -28,7 +62,7 @@ $spacing-util: (
 
 $util: (
     name: "#{$prop}__#{$side}",
-    default: (#{$prop}-#{$side}: 8px),
+    default: (#{$prop}-#{$side}: tokens.use($_, "space", 1)),
     modifiers: $mods
 );
 
@@ -39,7 +73,7 @@ $mods: (
 );
 
 //Builds all around
-@each $size, $length in var_default.$spacers {
+@each $size, $length in $spacers {
     @if $length !=auto or $prop ==margin {
         $style: (
             #{$size}:(#{$prop}: #{$length})
@@ -50,7 +84,7 @@ $mods: (
 
 $util: (
     name: "#{$prop}",
-    default: (#{$prop}: 8px),
+    default: (#{$prop}: tokens.use($_, "space", 1)),
     modifiers: $mods
 );
 
@@ -60,7 +94,7 @@ $mods: (
 );
 
 //Builds on axis Y
-@each $size, $length in var_default.$spacers {
+@each $size, $length in $spacers {
     @if $length !=auto or $prop ==margin {
         $style: (
             #{$size}:(#{$prop}-top: #{$length},
@@ -72,15 +106,15 @@ $mods: (
 
 $util: (
     name: "#{$prop}__y",
-    default: (#{$prop}-top: 8px,
-        #{$prop}-bottom: 8px),
+    default: (#{$prop}-top: tokens.use($_, "space", 1),
+        #{$prop}-bottom: tokens.use($_, "space", 1)),
     modifiers: $mods
 );
 
 $spacing-util: list.append($spacing-util, $util);
 
 //Builds on axis X
-@each $size, $length in var_default.$spacers {
+@each $size, $length in $spacers {
     @if $length !=auto or $prop ==margin {
         $style: (
             #{$size}:(#{$prop}-left: #{$length},
@@ -92,8 +126,8 @@ $spacing-util: list.append($spacing-util, $util);
 
 $util: (
     name: "#{$prop}__x",
-    default: (#{$prop}-left: 8px,
-        #{$prop}-right: 8px),
+    default: (#{$prop}-left: tokens.use($_, "space", 1),
+        #{$prop}-right: tokens.use($_, "space", 1)),
     modifiers: $mods
 );
 
@@ -105,7 +139,7 @@ $spacing-util: list.append($spacing-util, $util);
     $mods: (
     );
 
-@each $size, $length in var_default.$spacers {
+@each $size, $length in $spacers {
     $style: (
         #{$size}: (#{$side}: #{$length})
     );
